[package]
name = "rlg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["cargo", "wrap_help", "string"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.25.0"
rev_lines = "0.3.0"
serde = {version = "1.0.195", features = ["derive"]}
toml = "0.8.8"
